[package]
name = "card"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "~1.17.1"
thiserror = "~1.0.49"  
borsh = "0.10"
spl-token = { version="~4.0.0", features = [ "no-entrypoint" ] }
[lib]
crate-type = ["cdylib", "lib"]
